src/assets/main.css
@import './base.css';

#app {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    padding: 0;
    font-weight: normal;
    min-height: 100vh;
}

a {
    text-decoration: none;
    color: var(--color-secundary);
    transition-duration: 0.3s;
    transition-property: color;
}

button {
    border-width: 0;
    background-color: var(--vt-c-red);
    border-radius: .5rem;
    font-weight: 500;
    color: var(--vt-c-white);
    font-size: 1.3rem;
    padding: .2rem 1rem;
    line-height: 2rem;
    cursor: pointer;
    text-align: center;
    transition: .3s;
}

button:enabled:hover {
    opacity: .7;
}

button.full {
    margin-top: 1rem;
    display: block;
    width: 100%;
}

button:disabled {
    background-color: var(--color-border);
    color: var(--color-text);
    cursor: default;
}

input[type='text'], input[type='number'], input[type='tel'] {
    border-width: 0;
    border-radius: .5rem;
    transition: .3s;
    text-align: left;
    height: 2.5rem;
    padding: .1rem .5rem;
    background-color: var(--color-background-mute);
    color: var(--color-text);
}

input[type='text']::placeholder, input[type='number']::placeholder, input[type='tel']::placeholder {
    color: var(--color-border-hover);
}

svg.clickableIcon {
    transition: .3s;
    cursor: pointer;
    fill: var(--color-text);
}

svg.clickableIcon:hover {
    fill: var(--vt-c-yellow);
}

